@startuml

title __SNAPSHOT's Class Diagram__\n

  namespace com.grandtech.mapframe.core {
    namespace snapshot {
      class com.grandtech.mapframe.core.snapshot.AutoMapSnapshot {
          - baseDensity : float
          - context : Context
          - index : AtomicInteger
          - mMapboxMap : MapboxMap
          - mSnapParams : List<SnapParam>
          - mStyleJson : JsonObject
          - mapRect : Rect
          - padRect : Rect
          - padWidth : int
          - size : int
          - snapRect : Rect
          - snapshotters : List<MapSnapshotter>
          - threshold : int
          + AutoMapSnapshot()
          + batchSnapShot()
          + cancel()
          {static} + create()
          - assembleStyle()
          - creatMapSnapshotter()
      }
    }
  }
  

  namespace com.grandtech.mapframe.core {
    namespace snapshot {
      interface com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ICallBack {
          {abstract} + complete()
          {abstract} + onError()
          {abstract} + onNext()
      }
    }
  }
  

  namespace com.grandtech.mapframe.core {
    namespace snapshot {
      class com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ScreenShot {
          + ScreenShot()
          + onSnapshotReady()
      }
    }
  }
  

  namespace com.grandtech.mapframe.core {
    namespace snapshot {
      class com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity {
          {static} + RESULT_PATH : String
          {static} + SNAPPARAM : String
          {static} + STYLEJSON : String
          - mMapboxMap : MapboxMap
          - mStyleJson : JsonObject
          - mTakePic : ImageButton
          + onLowMemory()
          + onMapReady()
          + onPause()
          + onResume()
          + onSnapshotReady()
          # onCreate()
          # onDestroy()
          # onSaveInstanceState()
          # onStart()
          # onStop()
          - assembleStyle()
          - creatMapSnapshotter()
          - initData()
          - setEvent()
      }
    }
  }
  

  com.grandtech.mapframe.core.snapshot.AutoMapSnapshot .up.|> com.grandtech.mapframe.core.rules.Rules
  com.grandtech.mapframe.core.snapshot.AutoMapSnapshot o-- com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ICallBack : mICallBack
  com.grandtech.mapframe.core.snapshot.AutoMapSnapshot +-down- com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ICallBack
  com.grandtech.mapframe.core.snapshot.AutoMapSnapshot +-down- com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ScreenShot
  com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ScreenShot .up.|> com.mapbox.mapboxsdk.snapshotter.MapSnapshotter.SnapshotReadyCallback
  com.grandtech.mapframe.core.snapshot.AutoMapSnapshot.ScreenShot o-- com.grandtech.mapframe.core.snapshot.bean.SnapParam : mSnapParam
  com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity .up.|> com.grandtech.mapframe.core.rules.Rules
  com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity .up.|> com.mapbox.mapboxsdk.maps.MapboxMap.SnapshotReadyCallback
  com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity .up.|> com.mapbox.mapboxsdk.maps.OnMapReadyCallback
  com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity o-- com.grandtech.mapframe.core.snapshot.bean.SnapParam : mSnapParam
  com.grandtech.mapframe.core.snapshot.ManualMapSnapshotActivity o-- com.grandtech.mapframe.core.snapshot.view.SquareMapView : mSquareMapView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
